Logging process has been completed

--- a/ToDoListManagement.Api/appsettings.Development.json
+++ b/ToDoListManagement.Api/appsettings.Development.json
@@ -1,9 +1,48 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+    "Serilog": {
+        "Using": [
+            "Serilog.Sinks.Console",
+            "Serilog.Sinks.File",
+            "Serilog.Sinks.MSSqlServer"
+        ],
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "Logs/log-.txt",
+                    "rollingInterval": "Day",
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "MSSqlServer",
+                "Args": {
+                    "connectionString": "Data Source=localhost\\SQLEXPRESS;User ID=sa;Password=1;Initial Catalog=ToDoListManagement;TrustServerCertificate=True;",
+                    "tableName": "Logs",
+                    "autoCreateSqlTable": true
+                }
+            }
+        ],
+        "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+        "Properties": {
+            "Application": "MyApp"
         }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;User ID=sa;Password=1;Initial Catalog=ToDoListManagement;TrustServerCertificate=True;"
     },
 
     "AllowedHosts": "*",
